<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBeerDetail"
                android:layout_width="@dimen/dimen_xxxlarge"
                android:layout_height="@dimen/dimen_xxxlarge"
                android:layout_margin="@dimen/dimen_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBeerName"
                style="@style/Body1"
                android:layout_width="@dimen/dimen_adjustable"
                android:layout_margin="@dimen/dimen_short"
                android:text="@string/label_beer_name"
                app:layout_constraintLeft_toRightOf="@id/imgBeerDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgBeerDetail" />

            <TextView
                android:id="@+id/tvBeerTagline"
                style="@style/Body1"
                android:layout_width="@dimen/dimen_adjustable"
                android:layout_margin="@dimen/dimen_short"
                android:text="@string/label_beer_tagline"
                app:layout_constraintLeft_toRightOf="@id/imgBeerDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBeerName"/>

            <TextView
                android:id="@+id/tvBeerBrewed"
                style="@style/Body1"
                android:layout_width="@dimen/dimen_adjustable"
                android:layout_margin="@dimen/dimen_short"
                android:text="@string/label_beer_brewed_date"
                app:layout_constraintLeft_toRightOf="@id/imgBeerDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBeerTagline" />

            <TextView
                android:id="@+id/tvBeerFood"
                style="@style/Body1"
                android:layout_width="@dimen/dimen_adjustable"
                android:layout_margin="@dimen/dimen_short"
                android:text="@string/label_beer_food_pairing"
                app:layout_constraintLeft_toRightOf="@id/imgBeerDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBeerBrewed" />


            <TextView
                android:id="@+id/tvBeerDescription"
                style="@style/Body1"
                android:layout_width="@dimen/dimen_adjustable"
                android:layout_margin="@dimen/dimen_short"
                android:text="@string/label_beer_description"
                app:layout_constraintLeft_toRightOf="@id/imgBeerDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBeerFood" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>